# 7kaa

./: .gitignore  configure.ac
include/: Makefile.am  OCONFIG.h  OGAME.h  OGAMECTL.h  OGAMEINFO.h  OGAMEMENU.h  OGAMESTATE.h  OGJSON.h  OLOG.h  OREMOTE.h  OSYS.h  OSYSINFO.h
src/: 7kaaTestApp.cpp  AM.cpp  Makefile.am  OCONFIG.cpp  OCONFIGTest.cpp  OCONFIGTest.h  OERROR.cpp  OGAME.cpp  OGAMESTATE.cpp  OGAMESTATETest.cpp  OGAMESTATETest.h  OGFILE.cpp  OGJSON.cpp  OGJSONTest.cpp  OGJSONTest.h  OLOG.cpp  OSYS.cpp
src/ai/: Makefile.am
src/core/: Makefile.am
src/curl/: WebService.cpp
src/gamedata/: Makefile.am  OAI_CAP2.cpp  OAI_MAIN.cpp  OCONFIG.cpp  OFIRM.cpp  OFIRMA.cpp  OFIRMDIE.cpp  OFIRMDRW.cpp  OF_BASE.cpp  OF_CAMP.cpp  OF_CAMP2.cpp  OF_FACT.cpp  OF_FACT2.cpp  OF_HARB.cpp  OF_INN.cpp  OF_MARK.cpp  OF_MARK2.cpp  OF_MINE.cpp  OF_MINE2.cpp  OF_MONS.cpp  OF_RESE.cpp  OF_WAR.cpp  OGAMEINFO.cpp  OGAMEMP.cpp  OGAMESTATE.cpp  OGAMSING.cpp  OGENMAP.cpp  OINFO.cpp  ONATION.cpp  ONATIONA.cpp  ONATIONB.cpp  ONEWS.cpp  OPOWER.cpp  OREBEL.cpp  OSPRITE.cpp  OSPRITE2.cpp  OSPRITEA.cpp  OSPY.cpp  OSPYA.cpp  OSYS.cpp  (+26 more)
src/graf/: Makefile.am  OBOX.cpp  OBUTTON.cpp  OFONT.cpp  OVGABUF.cpp  vga_sdl.cpp
src/imgfun/generic/: Makefile.am
src/openal/: Makefile.am
src/res/: Makefile.am  ORES.cpp  ORESDB.cpp  ORESX.cpp  OTALKRES.cpp  OTECHRES.cpp
src/rmsg/: Makefile.am  OGFILE.cpp  OGFILE2.cpp  OGFILEA.cpp  OGJSON.cpp  OREMOTE.cpp  OREMOTE2.cpp  OREMOTEM.cpp
src/rungame/: Makefile.am  OBATTLE.cpp  OGAMECTL.cpp  OSYS.cpp  OSYS2.cpp
src/ui/: Makefile.am  OFIRMIF.cpp  OFIRMIF2.cpp  OGAMCRED.cpp  OGAMEMP.cpp  OGAMENCY.cpp  OGAMEND.cpp  OGAMHALL.cpp  OGAMMAIN.cpp  OGAMMENU.cpp  OGAMSCE2.cpp  OGAMSCEN.cpp  OGAMSING.cpp  OGETA.cpp  OHELP.cpp  OINGMENU.cpp  OMOUSE.cpp  OMUSIC.cpp  OOPTMENU.cpp  OR_ECO.cpp  OR_NAT.cpp  OR_RANK.cpp  OR_TOWN.cpp  OTOWNIF.cpp  OTRANSL.cpp  OTUTOR.cpp  OTUTOR2.cpp  OUNITIF.cpp  OU_MARIF.cpp
