CXXFLAGS += $(SDL_CFLAGS) -DDEBUG -DENABLE_LOG
noinst_LIBRARIES = lib7kaaCore.a
lib7kaaCore_a_SOURCES = \
	OBLOB.cpp \
	ODATE.cpp \
	ODB.cpp \
	ODIR.cpp \
	ODYNARR.cpp \
	OEFFECT.cpp \
	OERRCTRL.cpp \
	OERROR.cpp \
	OFILE.cpp \
	OFILETXT.cpp \
	OMISC.cpp \
	OSTR.cpp \
	dbglog.cpp \
	file_input_stream.cpp \
	file_output_stream.cpp \
	file_reader.cpp \
	file_util.cpp \
	file_writer.cpp \
	input_stream.cpp \
	misc_uuid.cpp \
	output_stream.cpp 
