CXXFLAGS += $(SDL_CFLAGS) -DDEBUG -DENABLE_LOG
noinst_LIBRARIES = lib7kaaGameData.a
lib7kaaGameData_a_SOURCES = \
	OBULLET.cpp \
	OBULLETA.cpp \
	ODYNARRB.cpp \
	OFIRM.cpp \
	OFIRM2.cpp \
	OFIRMA.cpp \
	OFIRMAI.cpp \
	OFIRMDIE.cpp \
	OFIRMDRW.cpp \
	OFIRMIF.cpp \
	OFIRMIF2.cpp \
	OFIRMIF3.cpp \
	ONATIONA.cpp \
	ONATIONB.cpp \
	ONEWS.cpp \
	ONEWS2.cpp \
	ONEWSENG.cpp \
	ONEWSFRE.cpp \
	ONEWSGER.cpp \
	ONEWSSPA.cpp \
	OREBEL.cpp \
	OREGION.cpp \
	OREGIONS.cpp \
	OROCK.cpp \
	OSITE.cpp \
	OSITEDRW.cpp \
	OSNOW1.cpp \
	OSNOW2.cpp \
	OSNOWG.cpp \
	OSPRITE.cpp \
	OSPRITE2.cpp \
	OSPRITEA.cpp \
	OSPY.cpp \
	OSPY2.cpp \
	OSPYA.cpp \
	OTORNADO.cpp \
	OTOWN.cpp \
	OTOWNA.cpp \
	OTOWNAI.cpp \
	OTOWNBLD.cpp \
	OTOWNDRW.cpp \
	OTOWNIF.cpp \
	OTOWNIND.cpp \
	OTownNetwork.cpp \
	OUNIT.cpp \
	OUNIT2.cpp \
	OUNITA.cpp \
	OUNITAAC.cpp \
	OUNITAAT.cpp \
	OUNITAC.cpp \
	OUNITAI.cpp \
	OUNITAM.cpp \
	OUNITAMT.cpp \
	OUNITAT.cpp \
	OUNITAT2.cpp \
	OUNITAT3.cpp \
	OUNITATB.cpp \
	OUNITD.cpp \
	OUNITDRW.cpp \
	OUNITHB.cpp \
	OUNITI.cpp \
	OUNITIF.cpp \
	OUNITIND.cpp \
	OUNITM.cpp \
	OUNITS.cpp \
	OWARPT.cpp 

lib7kaaGameData_a_LIBADD = 

lib7kaaGameData_a_LIBADD += ../core/lib7kaaCore.a
