CXXFLAGS += $(SDL_CFLAGS) -DDEBUG -DENABLE_LOG
noinst_LIBRARIES = lib7kaaGraf.a
lib7kaaGraf_a_SOURCES = \
	OANLINE.cpp \
	OBOX.cpp \
	OBUTT3D.cpp \
	OBUTTCUS.cpp \
	OBUTTON.cpp \
	OCOLTBL.cpp \
	OFONT.cpp \
	OLIGHTN.cpp \
	OLIGHTN2.cpp \
	ORAIN1.cpp \
	ORAIN2.cpp \
	ORAIN3.cpp \
	OVGABUF.cpp \
	OVGABUF2.cpp \
	OVGALOCK.cpp \
	OVIDEO.cpp \
	OVOLUME.cpp \
	surface_sdl.cpp \
	vga_sdl.cpp \
	vgautil.cpp \
	vgautil2.cpp

lib7kaaGraf_a_LIBADD = 

lib7kaaGraf_a_LIBADD += ../core/lib7kaaCore.a
