CXXFLAGS += $(SDL_CFLAGS) -DDEBUG -DENABLE_LOG
noinst_LIBRARIES = lib7kaaRmsg.a
lib7kaaRmsg_a_SOURCES = \
	OREMOTE.cpp \
	OREMOTE2.cpp \
	OREMOTEM.cpp \
	OREMOTEQ.cpp \
	player_desc.cpp 

lib7kaaRmsg_a_LIBADD = 

lib7kaaRmsg_a_LIBADD += ../res/lib7kaaRes.a ../gamedata/lib7kaaGameData.a ../core/lib7kaaCore.a
