CXXFLAGS += $(SDL_CFLAGS) -DDEBUG -DENABLE_LOG
noinst_LIBRARIES = lib7kaaRunGame.a
lib7kaaRunGame_a_SOURCES = \
	OBATTLE.cpp \
	OGAMECTL.cpp \
	OSYS.cpp \
	OSYS2.cpp \
	OSYS3.cpp 

lib7kaaRunGame_a_LIBADD = 

lib7kaaRunGame_a_LIBADD += ../res/lib7kaaRes.a ../ai/lib7kaaAI.a ../gamedata/lib7kaaGameData.a ../core/lib7kaaCore.a
