CXXFLAGS += $(SDL_CFLAGS) -DDEBUG -DENABLE_LOG
noinst_LIBRARIES = lib7kaaUI.a
lib7kaaUI_a_SOURCES = \
	OGAMMENU.cpp \
	OGETA.cpp \
	OFIRMIF.cpp \
	OFIRMIF2.cpp \
	OFIRMIF3.cpp \
	OGAMHALL.cpp \
	OHELP.cpp \
	OINGMENU.cpp \
	OMOUSE.cpp \
	OMOUSECR.cpp \
	OMUSIC.cpp \
	OOPTMENU.cpp \
	OR_AI.cpp \
	OR_ECO.cpp \
	OR_MIL.cpp \
	OR_NAT.cpp \
	OR_NEWS.cpp \
	OR_RANK.cpp \
	OR_SPY.cpp \
	OR_TECH.cpp \
	OR_TOWN.cpp \
	OR_TRADE.cpp \
	OSCROLL.cpp \
	OSE.cpp \
	OSLIDCUS.cpp \
	OTALKENG.cpp \
	OTALKFRE.cpp \
	OTALKGER.cpp \
	OTALKMSG.cpp \
	OTALKSPA.cpp \
	OTOWNIF.cpp \
	OTUTOR.cpp \
	OTUTOR2.cpp \
	OVBROWIF.cpp \
	OVBROWSE.cpp 

lib7kaaUI_a_LIBADD = 

lib7kaaUI_a_LIBADD += ../graf/lib7kaaGraf.a ../res/lib7kaaRes.a ../gamedata/lib7kaaGameData.a ../core/lib7kaaCore.a
